# F.Project.2022

./: CMakeLists.txt  Dockerfile  README.md  image_classification.cpp  image_detection.cpp  stream_classification.cpp  stream_detection.cpp
.github/workflows/: ci.yml
Imaging/: CMakeLists.txt  package.xml
Imaging/src/: ncs_server.cpp
Imaging/tests/: test_unit.test  unittest_image_classification.cpp  unittest_image_detection.cpp
Lib/include/: CMakeLists.txt
Lib/include/lib/: config_manager.h  performance_monitor.h  utils.h
config/: densenet121.yaml  facenet.yaml  project_config.yaml  resnet50.yaml  yolov3.yaml
data/labels/: imagenet1001.txt  voc21.txt
doc/: image_classification.md  image_detection.md  multiple_device.md  video_classification.md  video_detection.md
examples/: CMakeLists.txt  batch_processing_example.cpp  calibration_example.cpp  multi_camera_example.cpp  performance_benchmark_example.cpp
scripts/: build.sh  setup.sh
src cpp/: config_manager.cpp  performance_monitor.cpp  utils.cpp
tests/: CMakeLists.txt
tools/: CMakeLists.txt  device_manager.cpp  model_converter.cpp  performance_analyzer.cpp  thermal_monitor.cpp
